testData/commands/errors/test.ts
import { defineCommand } from "../../../definitions.js";

export default defineCommand({
    key: "test"
});
